@@ -8,21 +8,23 @@
   <parent>
     <groupId>com.fasterxml.jackson.datatype</groupId>
     <artifactId>jackson-datatype-hibernate-parent</artifactId>
-    <version>2.14.0-SNAPSHOT</version>
+    <version>2.15.0-SNAPSHOT</version>
   </parent>
   <artifactId>jackson-datatype-hibernate5</artifactId>
   <name>Jackson-datatype-Hibernate5</name>
   <packaging>bundle</packaging>
-  <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
-Hibernate (http://hibernate.org) version 5.x data types.
+  <description>Add-on module for Jackson (https://github.com/FasterXML/jackson) to support
+Hibernate (https://hibernate.org) version 5.x data types.
   </description>
   <url>https://github.com/FasterXML/jackson-datatype-hibernate</url>
   <properties>
+    <javac.src.version>1.8</javac.src.version>
+    <javac.target.version>1.8</javac.target.version>
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/datatype/hibernate5</packageVersion.dir>
     <packageVersion.package>${project.groupId}.hibernate5</packageVersion.package>
     <!-- Hibernate with JPA 2.0 -->
-    <hibernate.version>5.2.18.Final</hibernate.version>
+    <hibernate.version>5.3.20.Final</hibernate.version>
     <osgi.export>${project.groupId}.hibernate5</osgi.export>
   </properties>
 
@@ -48,6 +50,15 @@ Hibernate (http://hibernate.org) version 5.x data types.
       <artifactId>hibernate-entitymanager</artifactId>
       <version>${hibernate.version}</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <!-- update Hibernate dependency on Javassist
+              to 3.23.1 for Java 11 compatibility -->
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.23.1-GA</version>
+      <scope>test</scope>
     </dependency>
 
     <!--  and for some contributed tests Mockito -->
@@ -97,19 +108,12 @@ Hibernate (http://hibernate.org) version 5.x data types.
           </execution>
         </executions>
       </plugin>
-
-      <!-- 02-Mar-2017, tatu: Need to publish test jar for 5.2 test to work -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-
-        <executions>
-          <execution>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
